Redraw Timer crashes Blender #64421

Closed
opened 2019-05-10 09:03:25 +02:00 by Sebastian Koenig · 11 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX1080

Blender Version
Broken: 2.80, 6b082278d1

Short description of error
I wanted to compare draw times of current vs. older versions of 2.80, however, when I try to use the Redraw Timer, Blender crashes with segmentation fault.

Exact steps for others to reproduce the error
Open Blender, bring up the menu for redraw timer (CTRL+ALT+T in old keymap), try any of the items, for example Draw Region. Crashes for me every time.

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX1080 **Blender Version** Broken: 2.80, 6b082278d195 **Short description of error** I wanted to compare draw times of current vs. older versions of 2.80, however, when I try to use the Redraw Timer, Blender crashes with segmentation fault. **Exact steps for others to reproduce the error** Open Blender, bring up the menu for redraw timer (CTRL+ALT+T in old keymap), try any of the items, for example Draw Region. Crashes for me every time.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

#64828 was marked as duplicate of this issue

#64828 was marked as duplicate of this issue

Added subscriber: @machieb

Added subscriber: @machieb

Crash also on Windows 10 Pro 64bit
Nvidia GTX 1080Ti

Crash also on Windows 10 Pro 64bit Nvidia GTX 1080Ti

Added subscriber: @antoniov

Added subscriber: @antoniov

I can confirm on Windows 10.

Callstack:

blender.exe!GPU_viewport_engines_data_validate(GPUViewport * viewport, void * * engine_handle_array) Line 369	C
blender.exe!drw_engines_data_validate() Line 1496	C
blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1630	C
blender.exe!DRW_draw_view(const bContext * C) Line 1583	C
blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1428	C
blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1450	C
blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 572	C
blender.exe!redraw_timer_step(bContext * C, Main * bmain, Scene * scene, Depsgraph * depsgraph, wmWindow * win, ScrArea * sa, ARegion * ar, const int type, const int cfra) Line 3086	C
blender.exe!redraw_timer_exec(bContext * C, wmOperator * op) Line 3171	C
blender.exe!WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) Line 752	C
blender.exe!WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Line 773	C
blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1409	C
blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1623	C
blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1672	C
blender.exe!ui_apply_but_funcs_after(bContext * C) Line 792	C
blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10203	C
blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 608	C
blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2573	C
blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2804	C
blender.exe!wm_event_do_handlers(bContext * C) Line 3172	C
blender.exe!WM_main(bContext * C) Line 421	C
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502	C

The variable viewport is NULL in GPU_viewport_engines_data_validate()

I can confirm on Windows 10. Callstack: ``` blender.exe!GPU_viewport_engines_data_validate(GPUViewport * viewport, void * * engine_handle_array) Line 369 C blender.exe!drw_engines_data_validate() Line 1496 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1630 C blender.exe!DRW_draw_view(const bContext * C) Line 1583 C blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1428 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1450 C blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 572 C blender.exe!redraw_timer_step(bContext * C, Main * bmain, Scene * scene, Depsgraph * depsgraph, wmWindow * win, ScrArea * sa, ARegion * ar, const int type, const int cfra) Line 3086 C blender.exe!redraw_timer_exec(bContext * C, wmOperator * op) Line 3171 C blender.exe!WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) Line 752 C blender.exe!WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Line 773 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1409 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1623 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1672 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 792 C blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10203 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 608 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2573 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2804 C blender.exe!wm_event_do_handlers(bContext * C) Line 3172 C blender.exe!WM_main(bContext * C) Line 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 502 C ``` The variable *viewport* is NULL in *GPU_viewport_engines_data_validate()*

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

@fclem @Jeroen-Bakker Not sure if this is for you.

@fclem @Jeroen-Bakker Not sure if this is for you.

Added subscriber: @MrGrapeDave

Added subscriber: @MrGrapeDave

This issue was referenced by ad4dd3ebef

This issue was referenced by ad4dd3ebeffb34de1892d02bd372918f4866b7de

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64421
No description provided.