Fix T64421: crash using redraw timer benchmark